# Gilded-Rose-Practice

./: README.md
DesignPatterns/: CMakeLists.txt  DisplayStrategy.h  NaviEconomicStrategy.cpp  NaviEconomicStrategy.h  NaviFastStrategy.cpp  NaviFastStrategy.h  NaviScenicStrategy.cpp  NaviScenicStrategy.h  Navigation.cpp  Navigation.h  NavigationStrategy.h  display_2D.cpp  display_2D.h  display_3D.cpp  display_3D.h  main.cpp
Gilded_Rose/src/gilded_rose/: CMakeLists.txt  ConcreteItemCreator.cpp  ConcreteItemCreator.h  GildedRose.cpp  GildedRose.h  GildedRoseUnitTests.cpp  Item.cpp  Item.h  ItemCreator.cpp  ItemCreator.h  ItemTypes.cpp  ItemTypes.h  NormalItem.cpp  NormalItem.h  main.cpp
UML/: BatteryApp.cpp  BatteryLogger.cpp  BatteryLogger.h  Subject.cpp  SystemBattery.cpp  main.cpp
